[package]
name = "wordle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1"
ordered-float = "2"
clap = { version = "3", default-features = false, features = ["std", "derive"] }
array2d = "0.2.1"